# NLPinitiative

./: .gitignore  404.html  LICENSE  Makefile  Pipfile  README.md  REFERENCES.bib  __init__.py  cmdmgr.sh  dataset.py  features.py  index.html  mkdocs.yml  nbk.ipynb  notebook.ipynb  objects.inv  pkgmgr.sh  plots.py  pyproject.toml  search.html  setup.sh  test.py
data/: dataset_record.csv
data/normalization_schema/: conv_schema_template.json  ethos_schema_mapping.json  mutltitarget_conan_mapping.json
dataset-management/: index.html
docs/: dataset-management.md  index.md  mkdocs.yml  model-management.md
docs/notebooks/: Data_Import_Notes.ipynb  Data_Processing.ipynb  Inference_Demo.ipynb  Model_Training.ipynb  dataset_research.ipynb
getting-started/: index.html
model-management/: index.html
modeling/: train.py
nlpinitiative/: LICENSE  Makefile  README.md  __init__.py  config.py  dataset.py  setup.py
nlpinitiative/data_preparation/: data_import.py  data_management.py  data_normalize.py  data_preparation.py  data_process.py  dataset_normalizer.py
nlpinitiative/data_preparation/conversion_schema/: conv_schema_template.json
nlpinitiative/docs/: Makefile  conf.py  index.rst  make.bat
nlpinitiative/modeling/: __init__.py  predict.py  train.py
nlpinitiative/notebooks/: notebook.ipynb  test.ipynb
notebooks/: Data_Import_Notes.ipynb  Data_Preparation_Notes.ipynb  Data_Processing.ipynb  Inference_Demo.ipynb  Model_Training.ipynb
notebooks/Data_Import_Notes/: index.html
notebooks/Data_Processing/: index.html
notebooks/Inference_Demo/: index.html
notebooks/Model_Training/: index.html
notebooks/dataset_research/: index.html
references/: REFERENCES.bib
search/: search_index.json
style/: style.css
test/: test_data_management.py  test_model_logic.py
